--- a/httpd.conf
+++ b/httpd.conf
@@ -276,7 +276,7 @@ DocumentRoot "/usr/local/apache2/htdocs"
     # http://httpd.apache.org/docs/2.4/mod/core.html#options
     # for more information.
     #
-    Options Indexes FollowSymLinks
+    Options Indexes FollowSymLinks ExecCGI
 
     #
     # AllowOverride controls what directives may be placed in .htaccess files.
@@ -296,7 +296,7 @@ DocumentRoot "/usr/local/apache2/htdocs"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html
+    DirectoryIndex index.cgi
 </IfModule>
 
 #
@@ -443,7 +443,7 @@ LogLevel warn
     # To use CGI scripts outside of ScriptAliased directories:
     # (You will also need to add "ExecCGI" to the "Options" directive.)
     #
-    #AddHandler cgi-script .cgi
+    AddHandler cgi-script .cgi
 
     # For type maps (negotiated resources):
     #AddHandler type-map var
