--- a/httpd.conf
+++ b/httpd.conf
@@ -192,7 +192,7 @@ LoadModule autoindex_module modules/mod_autoindex.so
 #LoadModule negotiation_module modules/mod_negotiation.so
 LoadModule dir_module modules/mod_dir.so
 #LoadModule imagemap_module modules/mod_imagemap.so
-#LoadModule actions_module modules/mod_actions.so
+LoadModule actions_module modules/mod_actions.so
 #LoadModule speling_module modules/mod_speling.so
 #LoadModule userdir_module modules/mod_userdir.so
 LoadModule alias_module modules/mod_alias.so
@@ -289,6 +289,8 @@ DocumentRoot "/usr/local/apache2/htdocs"
     # Controls who can get stuff from this server.
     #
     Require all granted
+
+    Action text/markdown /cgi-bin/markdown.cgi virtual
 </Directory>
 
 #
@@ -444,6 +446,7 @@ LogLevel warn
     # (You will also need to add "ExecCGI" to the "Options" directive.)
     #
     AddHandler cgi-script .cgi
+    AddHandler text/markdown .markdown .md
 
     # For type maps (negotiated resources):
     #AddHandler type-map var
