--- a/httpd.conf
+++ b/httpd.conf
@@ -293,6 +293,12 @@ DocumentRoot "/usr/local/apache2/htdocs"
     Action text/markdown /cgi-bin/markdown.cgi virtual
 </Directory>
 
+<Directory "/usr/local/apache2/res">
+    AllowOverride None
+    Options None
+    Require all granted
+</Directory>
+
 #
 # DirectoryIndex: sets the file that Apache will serve if a directory
 # is requested.
@@ -366,7 +372,7 @@ LogLevel warn
     # Alias: Maps web paths into filesystem paths and is used to
     # access content that does not live under the DocumentRoot.
     # Example:
-    # Alias /webpath /full/filesystem/path
+    Alias /res/ "/usr/local/apache2/res/"
     #
     # If you include a trailing / on /webpath then the server will
     # require it to be present in the URL.  You will also likely
