--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -558,3 +558,9 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 
+<IfModule mod_expires.c>
+  ExpiresActive On
+  <FilesMatch "\.(png|jpe?g|gif|css|js|html)$">
+     ExpiresDefault "modification plus 1 hours"
+  </FilesMatch>
+</IfModule>
